# The-AI-Engineer-Challenge

./: .env.example  .gitignore  .vercelignore  AGENTS.md  DEAD_CODE_ANALYSIS.md  FAQandCommonIssues.md  LIGHTWEIGHT_OPTIMIZATION.md  MERGE.md  MERGE_AUTO_SUBMIT_SUGGESTED_QUESTIONS.md  MERGE_DEVELOPER_MESSAGE_RAG.md  MERGE_MULTI_DOCUMENT_SUPPORT.md  MERGE_SUGGESTED_QUESTIONS.md  MERGE_TOGETHER_AI_INTEGRATION.md  MERGE_TOPIC_EXPLORER.md  NUMPY_USAGE_ANALYSIS.md  OLLAMA_INTEGRATION.md  README.md  REFACTOR_MULTI_DOCUMENT_SUPPORT.md  TASK_1_IMPLEMENTATION.md  VERCEL_OPTIMIZATION.md  doc-converting.ipynb  docker-compose.yml  math-test.md  package-lock.json  package.json  pyproject.toml  test-extraction.js  test_ollama_integration.py  vercel.json
.agents/skills/ai-chat-rag-application-patterns/: AGENTS.md  SKILL.md
.agents/skills/fastapi-pydantic-best-practices/: AGENTS.md  SKILL.md
.agents/skills/frontend-accessibility-interaction-design/: AGENTS.md  SKILL.md
.agents/skills/vercel-react-best-practices/: SKILL.md
.agents/skills/vitest-react-testing-library/: AGENTS.md  SKILL.md
.augment/rules/: branch-dev-workflow.md  frontend-rule.md  general-rule.md  readme-rule.md
.cursor/rules/: branch-dev-workflow.mdc  general-rule.mdc
.github/workflows/: auggie-describe-pr.yml  auggie-pr-review.yml
aimakerspace/: text_utils.py  vectordatabase.py  youtube_utils.py
aimakerspace/openai_utils/: chatmodel.py  embedding.py
api/: Dockerfile  README.md  app.py  context_manager.py  openai_helper.py  pdf_rag.py  pdf_rag_lightweight.py  persistence.py  rag_lightweight.py  requirements-backup.txt  requirements.txt
api/tests/: __init__.py  test_app.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  AppWrapper.test.tsx  AppWrapper.tsx  index.css  main.tsx
frontend/src/components/: ChatInterface.css  ChatInterface.imageAttachment.test.tsx  ChatInterface.tsx  EntryScreen.css  EntryScreen.test.tsx  EntryScreen.tsx  Header.css  Header.test.tsx  Header.tsx  MarkdownRenderer.css  MarkdownRenderer.tsx  PDFUpload.css  PDFUpload.tsx  RAGQuery.css  RAGQuery.tsx  SettingsModal.css  SettingsModal.test.tsx  SettingsModal.tsx  SuggestedQuestions.css  SuggestedQuestions.tsx
frontend/src/contexts/: AuthContext.test.tsx  AuthContext.tsx
frontend/src/utils/: errorFormatter.test.ts  errorFormatter.ts  suggestedQuestionsExtractor.ts
