[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "docling>=2.52.0",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.29.5",
    "nump>=5.5.5.5",
    "openai>=1.59.7",
    "openai-whisper>=20250625",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "yt-dlp>=2025.9.5",
]
