[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core API dependencies
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "openai>=1.77.0",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.18",
    "slowapi>=0.1.9",
    
    # PDF processing and RAG dependencies
    "docling>=2.52.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # Jupyter and development dependencies
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    
    # Media processing dependencies
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20250625",
    "yt-dlp>=2025.9.5",
]
